fixing loading stylesheet errors

--- a/sub3suite/res.qrc
+++ b/sub3suite/res.qrc
@@ -73,8 +73,7 @@
         <file>res/files/HISTORY</file>
     </qresource>
     <qresource prefix="/themes">
-        <file>res/themes/dark.css</file>
-        <file>res/themes/light.css</file>
+        <file>res/themes/default.css</file>
     </qresource>
     <qresource prefix="/documentation">
         <file>res/documentation/engines/active.html</file>
