--- a/sub3suite/src/MainWindow.ui
+++ b/sub3suite/src/MainWindow.ui
@@ -20,647 +20,7 @@
    <string>Sub3 Suite</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">QWidget {
-    outline: 0;
-}
-
-QComboBox {
-    min-height: 19px;
-    max-height: 19px;
-    border-style: outset;
-    border-style: solid;
-    border-color: rgb(25,25,25);
-    border-width: 1px;
-    color: rgb(250,250,250);
-    padding-left: 5px;
-    padding-bottom: 1px;
-    background-color: transparent;
-}
-
-QComboBox QWidget {
-    color: rgb(250,250,250);
-    background-color: rgb(52,52,52);
-    selection-background-color: rgba(0,0,0, 50);
-    selection-color: rgb(250,250,250);
-}
-
-QComboBox::drop-down {
-    image: url(:/img/res/icons/downArrow.png);
-    padding-top: 3px;
-    padding-right: 5px;
-    padding-left: 5px;
-}
-
-QComboBox QWidget::item {
-    padding-top: 3px;
-    padding-bottom: 3px;
-}
-
-QScrollArea {
-    border-style: outset;
-    border-style: solid;
-    border-width: 1px;
-    border-color: rgb(25,25,25);
-}
-
-QScrollArea[without_border=&quot;true&quot;] {
-    border-style: solid;
-    border-width: 0px;
-}
-
-QScrollArea QWidget {
-    background-color: rgb(40,40,40);
-}
-
-QAbstractScrollArea {
-    background-color: transparent;
-}
-
-QToolBox QScrollArea {
-    border-width: 0px;
-}
-
-QToolBox QWidget {
-    background-color:rgb(45,45,45);
-}
-
-QToolBox::tab {
-    padding-left: 12px;
-    color: white;
-    background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(37, 37, 37, 255), stop:1 rgba(57, 57, 57, 255));
-    border-style: solid;
-    border-width: 1px;
-    border-color: rgb(20,20,20);;
-}
-
-QToolBox::tab:hover {
-    background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(47, 47, 47, 255), stop:1 rgba(141, 141, 106, 180));
-}
-
-QToolBox::tab:selected {
-    background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(37, 37, 37, 255), stop:1 rgba(47, 47, 47, 255));
-    color: white;
-}
-
-QScrollBar:horizontal {
-    height: 18px;
-    margin: 4px 16px 4px 16px;
-    border: 0;
-    border-radius: 4px;
-    background-color: transparent;
-}
-
-QScrollBar::handle:horizontal {
-    background-color: rgb(70,70,70);
-    min-width: 5px;
-    border-radius: 4px;
-}
-
-QScrollBar::handle:horizontal:hover {
-    background-color: rgb(78,78,78);
-    min-width: 5px;
-    border-radius: 4px;
-}
-
-QScrollBar::add-line:horizontal {
-    margin: 0px 3px 0px 3px;
-    border-image: url(:/img/res/icons/right.png);
-    height: 10px;
-    width: 10px;
-    subcontrol-position: right;
-    subcontrol-origin: margin;
-}
-
-QScrollBar::sub-line:horizontal {
-    margin: 0px 3px 0px 3px;
-    border-image: url(:/img/res/icons/left.png);
-    height: 10px;
-    width: 10px;
-    subcontrol-position: left;
-    subcontrol-origin: margin;
-}
-
-QScrollBar::add-line:horizontal:hover,
-QScrollBar::add-line:horizontal:on {
-    border-image: url(:/img/res/icons/right_on.png);
-    height: 10px;
-    width: 10px;
-    subcontrol-position: right;
-    subcontrol-origin: margin;
-}
-
-QScrollBar::sub-line:horizontal:hover,
-QScrollBar::sub-line:horizontal:on {
-    border-image: url(:/img/res/icons/left_on.png);
-    height: 10px;
-    width: 10px;
-    subcontrol-position: left;
-    subcontrol-origin: margin;
-}
-
-QScrollBar::up-arrow:horizontal,
-QScrollBar::down-arrow:horizontal {
-    background: none;
-}
-
-QScrollBar::add-page:horizontal,
-QScrollBar::sub-page:horizontal {
-    background: none;
-}
-
-QScrollBar:vertical {
-    background-color: transparent;
-    width: 18px;
-    margin: 16px 4px 16px 4px;
-    border-radius: 4px;
-}
-
-QScrollBar::handle:vertical {
-    background-color: rgb(70,70,70);
-    min-height: 24px;
-    border-radius: 4px;
-}
-
-QScrollBar::handle:vertical:hover {
-    background-color: rgb(78,78,78);
-    min-height: 24px;
-    border-radius: 4px;
-}
-
-QScrollBar::sub-line:vertical {
-    margin: 3px 0px 3px 0px;
-    border-image: url(:/img/res/icons/up.png);
-    height: 10px;
-    width: 10px;
-    subcontrol-position: top;
-    subcontrol-origin: margin;
-}
-
-QScrollBar::add-line:vertical {
-    margin: 3px 0px 3px 0px;
-    border-image: url(:/img/res/icons/down.png);
-    height: 10px;
-    width: 10px;
-    subcontrol-position: bottom;
-    subcontrol-origin: margin;
-}
-
-QScrollBar::sub-line:vertical:hover,
-QScrollBar::sub-line:vertical:on {
-    border-image: url(:/img/res/icons/up_on.png);
-    height: 10px;
-    width: 10px;
-    subcontrol-position: top;
-    subcontrol-origin: margin;
-}
-
-QScrollBar::add-line:vertical:hover,
-QScrollBar::add-line:vertical:on {
-    border-image: url(:/img/res/icons/down_on.png);
-    height: 10px;
-    width: 10px;
-    subcontrol-position: bottom;
-    subcontrol-origin: margin;
-}
-
-QScrollBar::up-arrow:vertical,
-QScrollBar::down-arrow:vertical {
-    background: none;
-}
-
-QScrollBar::add-page:vertical,
-QScrollBar::sub-page:vertical {
-    background: none;
-}
-
-QStatusBar {
-    border-style: solid;
-    border-style: outset;
-    border-width: 1px;
-    border-top-color: rgb(70,70,70);
-    border-right-color: rgb(70,70,70);
-    border-left-color: rgb(70,70,70);
-    border-bottom-color: transparent;
-}
-
-QToolButton:!pressed {
-    min-height: 13px;
-    max-height: 14px;
-    min-width: 50px;
-    border-style: outset;
-    border-color: rgb(15,15,15);
-    border-width: 1px;
-    border-style: solid;
-    border-radius: 5px;
-    padding: 2px;
-    color: rgb(185, 185, 145);
-    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,stop:0 rgba(60, 60, 60, 255),stop: 0.4 rgba(35, 35, 35, 255), stop: 0.5 rgba(35, 35, 35, 255) stop:1 rgba(60, 60, 60, 255));
-}
-
-QToolButton:hover {
-    border-style: outset;
-    border-color: rgb(15,15,15);
-    border-width: 1px;
-    border-style: solid;
-    border-radius: 5px;
-    padding: 2px;
-    color: rgb(190, 190, 150);
-    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,stop:0 rgba(65, 65, 65, 255),stop: 0.4 rgba(40, 40, 40, 255), stop: 0.5 rgba(40, 40, 40, 255) stop:1 rgba(65, 65, 65, 255));
-}
-
-QToolButton:pressed {
-    border-style: outset;
-    border-color: rgb(15,15,15);
-    border-width: 1px;
-    border-style: solid;
-    border-radius: 5px;
-    padding: 2px;
-    color: rgb(190, 190, 150);
-    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,stop:0 rgba(70, 70, 70, 255),stop: 0.4 rgba(45, 45, 45, 255), stop: 0.5 rgba(45, 45, 45, 255) stop:1 rgba(70, 70, 70, 255));
-}
-
-QFrame[frameShape=&quot;4&quot;] {
-    min-height: 1px;
-    max-height: 1px;
-    border: none;
-    background: rgb(20,20,20);
-}
-
-QFrame[default_frame=&quot;true&quot;] {
-    height: 45px;
-    max-height: 45px;
-    min-height: 45px;
-    background-color: rgb(40, 40, 40);
-}
-
-QFrame[dark_frame=&quot;true&quot;] {
-    background-color: rgb(40, 40, 40);
-}
-
-QLabel[dark=&quot;true&quot;] {
-    border-style: outset;
-    border-style: solid;
-    border-width: 1px;
-    border-color: rgb(25,25,25);
-    background-color: rgb(32, 32, 32);
-}
-
-QLabel {
-    color: black;
-}
-
-QLabel:disabled {
-    color: grey;
-}
-
-QMainWindow {
-    background-color:rgb(45,45,45);
-}
-
-QDialog {
-    background-color:rgb(45,45,45);
-}
-
-QSplitter::handle:horizontal {
-    background-color: transparent;
-    width: 10px;
-}
-
-QSplitter::handle:vertical{
-    background-color: transparent;
-    height: 10px;
-}
-QSplitterHandle:hover {}
-
-QSplitter::handle:horizontal:hover{
-    background-color:rgb(25,25,25);
-    margin-left: 3px;
-    margin-right: 3px;
-}
-
-QSplitter::handle:vertical:hover {
-    background-color:rgb(25,25,25);
-    margin-top: 3px;
-    margin-bottom: 3px;
-}
-
-QListView:!read-only,
-QTextEdit,
-QListWidget,
-QTableView,
-QTreeView,
-QListView,
-QColumnView,
-QPlainTextEdit {
-    background-color: rgb(25, 25, 25);
-    alternate-background-color: rgb(30, 30, 30);
-    color: rgb(180, 180, 140);
-    border-style: solid;
-    border-color: rgb(20,20,20);
-    border-width: 1px;
-}
-
-QPlainTextEdit[text_edit=&quot;true&quot;] {
-    background-color: rgb(25, 25, 25);
-    alternate-background-color: rgb(30, 30, 30);
-    color: rgb(180, 180, 140);
-    border-style: solid;
-    border-color: rgb(20,20,20);
-    border-width: 1px;
-}
-
-QTreeView::item{
-    border-style: solid;
-    border-color: rgb(15,15,15);
-    border-top-width: 0px;
-    border-right-width: 1px;
-    border-left-width: 0px;
-    border-bottom-width: 1px;
-}
-
-QListWidget::item:selected,
-QTreeView::item:selected,
-QTableView::item:selected,
-QListView::item:selected,
-QColumnView::item:selected {
-    background-color: rgba(0,0,0,50);
-    color: rgb(218, 218, 163);
-}
-
-QListWidget::item:hover,
-QTreeView::item:hover,
-QTableView::item:hover,
-QListView::item:hover,
-QColumnView::item:hover,
-QColumnView::item:hover {
-    background-color: rgba(0,0,0,50);
-    color: rgb(218, 218, 163);
-}
-
-QHeaderView::section {
-    max-height: 20px;
-    min-height:20px;
-    height: 20px;
-    background-color: rgba(80,80,80,90);
-    border-style: solid;
-    border-color: rgb(15,15,15);
-    border-top-width: 1px;
-    border-right-width: 1px;
-    border-left-width: 0px;
-    border-bottom-width: 0px;
-}
-
-QPushButton,
-QPushButton:!pressed{
-    min-height: 23px;
-    min-width: 75px;
-    padding-left: 1px;
-    padding-right: 1px;
-    border-style: outset;
-    border-color: rgb(15,15,15);
-    border-width: 1px;
-    border-style: solid;
-    color: rgb(180, 180, 140);
-    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,stop:0 rgba(50, 50, 50, 255),stop: 0.4 rgba(25,25,25,255), stop: 0.5 rgba(25,25,25,255) stop:1 rgba(50, 50, 50, 255));
-}
-
-QPushButton:hover {
-    color: rgb(170, 170, 127);
-    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,stop:0 rgba(60, 60, 60, 255),stop: 0.4 rgba(40, 40, 40, 255), stop: 0.5 rgba(40, 40, 40, 255) stop:1 rgba(60, 60, 60, 255));
-}
-
-QPushButton:pressed {
-    border-style: outset;
-    border-color: rgb(15,15,15);
-    border-width: 1px;
-    border-style: solid;
-    color: rgb(170, 170, 127);
-    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,stop:0 rgba(65, 65, 65, 255),stop: 0.4 rgba(45, 45, 45, 255), stop: 0.5 rgba(45, 45, 45, 255) stop:1 rgba(65, 65, 65, 255));
-}
-
-QPushButton:disabled {
-    border-style: outset;
-    border-color: rgb(15,15,15);
-    border-width: 1px;
-    border-style: solid;
-    color: grey;
-    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,stop:0 rgba(80, 80, 80, 255),stop: 0.4 rgba(55, 55, 55, 255), stop: 0.5 rgba(55, 55, 55, 255) stop:1 rgba(80, 80, 80, 255));
-}
-
-QLineEdit:disabled {
-    min-height: 18px;
-    max-height: 18px;
-    border-width: 1px;
-    border-radius: 5px;
-    border-color: rgb(20,20,20);
-    border-style: inset;
-    padding: 0 8px;
-    color: grey;
-    background-color: rgb(30, 30, 30);
-}
-
-QLineEdit:!disabled {
-    min-height: 18px;
-    max-height: 18px;
-    border-width: 1px;
-    border-radius: 5px;
-    border-color: rgb(20,20,20);
-    border-style: inset;
-    padding: 0 8px;
-    color: rgb(180, 180, 140);
-    background-color: rgb(30, 30, 30);
-}
-
-QProgressBar {
-    text-align: center;
-    color: black;
-    border-width: 1px;
-    border-color: rgb(20,20,20);
-    border-style: inset;
-    background-color: rgb(40,40,40);
-    height: 22px;
-    max-width: 200px;
-    min-width: 200px;
-}
-
-QProgressBar::chunk {
-    background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(50, 50, 50, 255), stop:1 rgba(150, 150, 112, 200));
-}
-
-QMenuBar {
-    margin-top: 1px;
-    background: rgb(45,45,45);
-}
-
-QMenu {
-    min-width: 100px;
-    border-style: solid;
-    border-width: 1px;
-    border-color: rgb(25,25,25);
-    background-color: rgb(37,37,37);
-}
-
-QMenuBar::item {
-    margin-top: 1px;
-    color: rgb(250,250,250);
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 1px;
-    padding-bottom: 1px;
-    background: transparent;
-}
-
-QMenuBar::item:disabled {
-    color: grey;
-}
-
-QMenuBar::item:selected,
-QMenuBar::item:hover,
-QMenu::item:selected {
-    border-style: solid;
-    border-width: 1px;
-    border-color: rgba(0,0,0,80);
-    background-color: rgba(0,0,0,50);
-}
-
-QMenu::​separator {
-    background-color: rgb(0, 0, 0);
-}
-
-QMenu::item {
-    color: rgb(250,250,250);
-    background-color: transparent;
-    margin-left: 5px;
-    padding-left: 22px;
-    padding-top: 4px;
-    padding-bottom: 4px;
-    padding-right: 20px;
-}
-
-QTabWidget::tab-bar {
-    left: 10px;
-}
-
-QTabWidget::pane {
-    border-color: rgb(25,25,25);
-    background-color:transparent;
-    border-style: solid;
-    border-top-width: 1px;
-    border-right-width: 0px;
-    border-left-width: 0px;
-    border-bottom-width: 0px;
-}
-
-QTabWidget::pane[upside=&quot;true&quot;] {
-    border-width: 0px;
-    background-color:transparent;
-}
-
-QTabBar::tab {
-    padding-left: 12px;
-    padding-right: 12px;
-    padding-top: 3.5px;
-    padding-bottom: 3.5px;
-    color: rgb(250,250,250);
-    background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(35, 35, 35, 255), stop:1 rgba(50, 50, 50, 255));
-    border-style: solid;
-    border-width: 1px;
-    border-color: rgb(25,25,25);
-    border-bottom-width: 0px;
-    margin-left: 2px;
-    margin-right: 1px;
-}
-
-QTabBar::tab:hover {
-    background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(42, 42, 42, 255), stop:1 rgba(141, 141, 106, 180));
-}
-
-QTabBar::tab:selected {
-    background-color: rgba(140,140,140,100);
-    color: rgb(20,20,20);
-}
-
-QGroupBox{
-    border-style: solid;
-    border-width:1px;
-    border-color: rgb(30,30,30);
-    padding-top: 5px;
-}
-
-QGroupBox:title {
-    color: rgb(130, 130, 105);
-    left: 10px;
-    margin-left: 3px;
-    margin-right: 3px;
-}
-
-QCheckBox {
-    color: rgb(250,250,250);
-    padding: 2px;
-}
-
-QCheckBox:disabled {
-    color: grey;
-    padding: 2px;
-}
-
-QCheckBox:hover {
-    border-style:solid;
-    border-width:1px;
-    border-color: rgb(37,37,37);
-}
-
-QCheckBox::indicator:checked,
-QGroupBox::indicator:checked
-{
-    border-style:solid;
-    border-width:1px;
-    border-color: rgb(37,37,37);
-    image: url(:/img/res/icons/checkBox.png);
-    background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(75, 75, 75, 255), stop:1 rgb(143, 143, 107));
-}
-
-QCheckBox::indicator:unchecked,
-QGroupBox::indicator:unchecked
-{
-    border-style:solid;
-    border-width:1px;
-    border-color: rgb(37,37,37);
-    background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(75, 75, 75, 255), stop:1 rgb(143, 143, 107));
-}
-
-QCheckBox::indicator:disabled {
-    background-color: grey;
-}
-
-QRadioButton {
-    color: rgb(250,250,250);
-    padding: 2px;
-}
-
-QRadioButton:hover {
-    border-style: solid;
-    border-width:1px;
-    border-color: rgb(50,50,50);
-}
-
-*[s3s_color=&quot;true&quot;] {
-    color: rgb(185, 185, 145);
-}
-
-*::item[no_item_border=&quot;true&quot;]{
-    border-width: 0px;
-}
-
-QListView:disabled,
-QTreeView:disabled {
-    color: grey;
-}
-
-QWidget[lighter=&quot;true&quot;]{
-    background-color: rgb(45,45,45);
-}
-</string>
+   <string notr="true"/>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
@@ -799,7 +159,7 @@ QWidget[lighter=&quot;true&quot;]{
      <x>0</x>
      <y>0</y>
      <width>1033</width>
-     <height>19</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
